<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/grassType">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:translationY="20dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:textAllCaps="true"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bulbasaur" />

            <TextView
                android:id="@+id/stat_hp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/stat_hp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name" />

            <ProgressBar
                android:id="@+id/pb_hp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_hp"
                app:layout_constraintTop_toTopOf="@+id/stat_hp"
                tools:progress="45" />

            <TextView
                android:id="@+id/stat_attack"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/stat_attack"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stat_hp" />

            <ProgressBar
                android:id="@+id/pb_attack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_defense"
                app:layout_constraintTop_toTopOf="@+id/stat_defense"
                tools:progress="49" />

            <TextView
                android:id="@+id/stat_defense"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/stat_defense"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stat_attack" />


            <ProgressBar
                android:id="@+id/pb_defense"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_attack"
                app:layout_constraintTop_toTopOf="@+id/stat_attack"
                tools:progress="49" />

            <TextView
                android:id="@+id/stat_special_attack"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/stat_sp_attack"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stat_defense" />


            <ProgressBar
                android:id="@+id/pb_special_attack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_special_attack"
                app:layout_constraintTop_toTopOf="@+id/stat_special_attack"
                tools:progress="65" />

            <TextView
                android:id="@+id/stat_special_defense"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/stat_sp_defense"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stat_special_attack" />

            <ProgressBar
                android:id="@+id/pb_special_defense"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_special_defense"
                app:layout_constraintTop_toTopOf="@+id/stat_special_defense"
                tools:progress="65" />

            <TextView
                android:id="@+id/stat_speed"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/stat_speed"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stat_special_defense" />

            <ProgressBar
                android:id="@+id/pb_speed"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:max="255"
                android:progressTint="#D81515"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stat_speed"
                app:layout_constraintTop_toTopOf="@+id/stat_speed"
                tools:progress="45" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="168dp"
        android:layout_height="195dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/pokemon_image_desc"
        android:translationY="-100dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

</androidx.constraintlayout.widget.ConstraintLayout>