<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="pokemon"
            type="com.example.pokedex.data.local.entity.Pokemon" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detail_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="421dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:translationY="20dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="true"
                    android:textSize="32sp"
                    android:text="@{pokemon.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Bulbasaur" />

                <TextView
                    android:id="@+id/detail_genera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="28dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_name"
                    android:text="Seed Pokemon" />
                    <!--android:text="@{pokemon.speciesDetail.genera.get(2).genus}"-->

                <TextView
                    android:id="@+id/detail_type1"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/rounded_corner_types"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_name"
                    tools:backgroundTint="@color/grassType"
                    tools:text="Grass" />

                <TextView
                    android:id="@+id/detail_type2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner_types"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/detail_type1"
                    app:layout_constraintTop_toBottomOf="@+id/detail_type1"
                    tools:backgroundTint="@color/poisonType"
                    tools:text="Poison" />

                <TextView
                    android:id="@+id/detail_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:padding="0dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_genera"
                    android:text="Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun’s rays,the seed grows progressively larger." />
                <!--android:text="@{pokemon.speciesDetail.flavorTextEntries.get(2).flavorText}"-->

                <TextView
                    android:id="@+id/detail_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    android:text="@{String.valueOf(pokemon.height)}"
                    app:layout_constraintStart_toEndOf="@+id/detail_height_caption"
                    app:layout_constraintTop_toTopOf="@+id/detail_height_caption"
                    tools:text="0.71 m" />

                <TextView
                    android:id="@+id/detail_height_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/detail_height_caption"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_summary" />

                <TextView
                    android:id="@+id/detail_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/detail_weight_caption"
                    app:layout_constraintTop_toTopOf="@+id/detail_weight_caption"
                    android:text="@{String.valueOf(pokemon.weight)}"
                    tools:text="6.9 kg" />

                <TextView
                    android:id="@+id/detail_weight_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_height_caption"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_height" />

                <TextView
                    android:id="@+id/detail_ability_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="56dp"
                    android:text="@string/detail_abilities_caption"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/detail_height" />

                <Button
                    android:id="@+id/detail_ability1"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/ability_button"
                    android:gravity="center_horizontal|center_vertical"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_ability_caption"
                    android:text="@{pokemon.abilities.get(0).ability.name}"
                    tools:text="Overgrow" />

                <Button
                    android:id="@+id/detail_ability2"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/ability_button"
                    android:gravity="center_horizontal|center_vertical"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_ability1"
                    android:text="@{pokemon.abilities.get(1).ability.name}"
                    tools:text="Chlorophyll" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="168dp"
            android:layout_height="195dp"
            android:layout_marginTop="140dp"
            android:contentDescription="@string/pokemon_image_desc"
            android:translationY="-100dp"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[3]" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
